dynamic port number to app.js

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Library App project for workshops in INFO30005",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "author": "Ronal Singh",
   "license": "ISC",
@@ -13,4 +12,6 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1"
   }
+
 }
+
